5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4135/executions/1638_2449.log
== TEST (2019-04-14 15:17:53) 
-- CODE:
a = float (input("Digite um numero a de:"))
b = float (input("Digite um numero de b:"))
c = float (input("Digite um numero de c:"))
d = float (input("Digite um numero de d:"))
e = float (input("Digite um numero de e:"))
f = float (input("digite um numero de f:"))
x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)
if (a*e-b*d=!0):
	print (x)
	print (y)
else:
	print ("Nao tem solucao")
-- ERROR:
File "XXXX", line 9
    if (a*e-b*d=!0):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:18:11) 
-- CODE:
a = float (input("Digite um numero a de:"))
b = float (input("Digite um numero de b:"))
c = float (input("Digite um numero de c:"))
d = float (input("Digite um numero de d:"))
e = float (input("Digite um numero de e:"))
f = float (input("digite um numero de f:"))
x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)
if (a*e-b*d!=0):
	print (x)
	print (y)
else:
	print ("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 15:18:26) 
-- CODE:
a = float (input("Digite um numero a de:"))
b = float (input("Digite um numero de b:"))
c = float (input("Digite um numero de c:"))
d = float (input("Digite um numero de d:"))
e = float (input("Digite um numero de e:"))
f = float (input("digite um numero de f:"))
x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)
if (a*e-b*d!=0):
	print (x)
	print (y)
else:
	print ("Nao tem solucao")
-- EXECUTION TIME:
0.319472
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 7, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:20:27) 
-- CODE:
a = float (input("Digite um numero a de:"))
b = float (input("Digite um numero de b:"))
c = float (input("Digite um numero de c:"))
d = float (input("Digite um numero de d:"))
e = float (input("Digite um numero de e:"))
f = float (input("digite um numero de f:"))
x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)
if (x = (c*e-b*f)/(a*e-b*d)!=0, y = (a*f-c*d)/(a*e-b*d)!=0):
	print (x)
	print (y)
else:
	print ("Nao tem solucao")
-- ERROR:
File "XXXX", line 9
    if (x = (c*e-b*f)/(a*e-b*d)!=0, y = (a*f-c*d)/(a*e-b*d)!=0):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:35:52) 
-- CODE:
a = float (input("Digite um numero a de:"))
b = float (input("Digite um numero de b:"))
c = float (input("Digite um numero de c:"))
d = float (input("Digite um numero de d:"))
e = float (input("Digite um numero de e:"))
f = float (input("digite um numero de f:"))
if (x = (c*e-b*f)/(a*e-b*d), y = (a*f-c*d)/(a*e-b*d) )
	print (round(x,2))
	print (round(y,2))
else:
	print ("Nao tem solucao")
-- ERROR:
File "XXXX", line 7
    if (x = (c*e-b*f)/(a*e-b*d), y = (a*f-c*d)/(a*e-b*d) )
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:36:05) 
-- CODE:
a = float (input("Digite um numero a de:"))
b = float (input("Digite um numero de b:"))
c = float (input("Digite um numero de c:"))
d = float (input("Digite um numero de d:"))
e = float (input("Digite um numero de e:"))
f = float (input("digite um numero de f:"))
if (x = (c*e-b*f)/(a*e-b*d), y = (a*f-c*d)/(a*e-b*d) ):
	print (round(x,2))
	print (round(y,2))
else:
	print ("Nao tem solucao")
-- ERROR:
File "XXXX", line 7
    if (x = (c*e-b*f)/(a*e-b*d), y = (a*f-c*d)/(a*e-b*d) ):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:37:17) 
-- CODE:
a = float (input("Digite um numero a de:"))
b = float (input("Digite um numero de b:"))
c = float (input("Digite um numero de c:"))
d = float (input("Digite um numero de d:"))
e = float (input("Digite um numero de e:"))
f = float (input("digite um numero de f:"))
x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)
if ((a*e-b*d)!=):
	print (round(x,2))
	print (round(y,2))
else:
	print ("Nao tem solucao")
-- ERROR:
File "XXXX", line 9
    if ((a*e-b*d)!=):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:37:26) 
-- CODE:
a = float (input("Digite um numero a de:"))
b = float (input("Digite um numero de b:"))
c = float (input("Digite um numero de c:"))
d = float (input("Digite um numero de d:"))
e = float (input("Digite um numero de e:"))
f = float (input("digite um numero de f:"))
x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)
if ((a*e-b*d)=!):
	print (round(x,2))
	print (round(y,2))
else:
	print ("Nao tem solucao")
-- ERROR:
File "XXXX", line 9
    if ((a*e-b*d)=!):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:37:38) 
-- CODE:
a = float (input("Digite um numero a de:"))
b = float (input("Digite um numero de b:"))
c = float (input("Digite um numero de c:"))
d = float (input("Digite um numero de d:"))
e = float (input("Digite um numero de e:"))
f = float (input("digite um numero de f:"))
x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)
if ((a*e-b*d)=!):
	print (round(x,2))
	print (round(y,2))
else:
	print ("Nao tem solucao")
-- ERROR:
File "XXXX", line 9
    if ((a*e-b*d)=!):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:37:46) 
-- CODE:
a = float (input("Digite um numero a de:"))
b = float (input("Digite um numero de b:"))
c = float (input("Digite um numero de c:"))
d = float (input("Digite um numero de d:"))
e = float (input("Digite um numero de e:"))
f = float (input("digite um numero de f:"))
x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)
if (a*e-b*d=!):
	print (round(x,2))
	print (round(y,2))
else:
	print ("Nao tem solucao")
-- ERROR:
File "XXXX", line 9
    if (a*e-b*d=!):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:40:49) 
-- CODE:
a = float (input("Digite um numero a de:"))
b = float (input("Digite um numero de b:"))
c = float (input("Digite um numero de c:"))
d = float (input("Digite um numero de d:"))
e = float (input("Digite um numero de e:"))
f = float (input("digite um numero de f:"))
x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)
denominador = (a*e)-(b*d)
if (denominador=!):
	print (round(x,2))
	print (round(y,2))
else:
	print ("Nao tem solucao")
-- ERROR:
File "XXXX", line 10
    if (denominador=!):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:40:59) 
-- CODE:
a = float (input("Digite um numero a de:"))
b = float (input("Digite um numero de b:"))
c = float (input("Digite um numero de c:"))
d = float (input("Digite um numero de d:"))
e = float (input("Digite um numero de e:"))
f = float (input("digite um numero de f:"))
x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)
denominador = (a*e)-(b*d)
if (denominador!=):
	print (round(x,2))
	print (round(y,2))
else:
	print ("Nao tem solucao")
-- ERROR:
File "XXXX", line 10
    if (denominador!=):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:41:14) 
-- CODE:
a = float (input("Digite um numero a de:"))
b = float (input("Digite um numero de b:"))
c = float (input("Digite um numero de c:"))
d = float (input("Digite um numero de d:"))
e = float (input("Digite um numero de e:"))
f = float (input("digite um numero de f:"))
x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)
denominador = (a*e)-(b*d)
if (denominador!=0):
	print (round(x,2))
	print (round(y,2))
else:
	print ("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:41:28) 
-- CODE:
a = float (input("Digite um numero a de:"))
b = float (input("Digite um numero de b:"))
c = float (input("Digite um numero de c:"))
d = float (input("Digite um numero de d:"))
e = float (input("Digite um numero de e:"))
f = float (input("digite um numero de f:"))
x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)
denominador = (a*e)-(b*d)
if (denominador!=0):
	print (round(x,2))
	print (round(y,2))
else:
	print ("Nao tem solucao")
-- EXECUTION TIME:
0.158243
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 7, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:42:33) 
-- CODE:
a = float (input("Digite um numero a de:"))
b = float (input("Digite um numero de b:"))
c = float (input("Digite um numero de c:"))
d = float (input("Digite um numero de d:"))
e = float (input("Digite um numero de e:"))
f = float (input("digite um numero de f:"))
x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)
if ((a*e)-(b*d)!=0):
	print (x)
	print (y)
else:
	print ("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:42:36) 
-- CODE:
a = float (input("Digite um numero a de:"))
b = float (input("Digite um numero de b:"))
c = float (input("Digite um numero de c:"))
d = float (input("Digite um numero de d:"))
e = float (input("Digite um numero de e:"))
f = float (input("digite um numero de f:"))
x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)
if ((a*e)-(b*d)!=0):
	print (x)
	print (y)
else:
	print ("Nao tem solucao")
-- EXECUTION TIME:
0.207007
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 7, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:43:48) 
-- CODE:
a = float (input("Digite um numero a de:"))
b = float (input("Digite um numero de b:"))
c = float (input("Digite um numero de c:"))
d = float (input("Digite um numero de d:"))
e = float (input("Digite um numero de e:"))
f = float (input("digite um numero de f:"))
x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)
if ((a*e)-(b*d)==0):
	print ("Nao tem solucao")
else:
	print (x)
	print (y)
-- EXECUTION TIME:
0.221164
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 7, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:43:54) 
-- CODE:
a = float (input("Digite um numero a de:"))
b = float (input("Digite um numero de b:"))
c = float (input("Digite um numero de c:"))
d = float (input("Digite um numero de d:"))
e = float (input("Digite um numero de e:"))
f = float (input("digite um numero de f:"))
x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)
if ((a*e)-(b*d)==0):
	print ("Nao tem solucao")
else:
	print (x)
	print (y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:46:35) 
-- CODE:
a = float (input("Digite um numero a de:"))
b = float (input("Digite um numero de b:"))
c = float (input("Digite um numero de c:"))
d = float (input("Digite um numero de d:"))
e = float (input("Digite um numero de e:"))
f = float (input("digite um numero de f:"))
x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)
if (x==0)(y==0):
	print ("Nao tem solucao")
else:
	print (x)
	print (y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:46:43) 
-- CODE:
a = float (input("Digite um numero a de:"))
b = float (input("Digite um numero de b:"))
c = float (input("Digite um numero de c:"))
d = float (input("Digite um numero de d:"))
e = float (input("Digite um numero de e:"))
f = float (input("digite um numero de f:"))
x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)
if (x==0)(y==0):
	print ("Nao tem solucao")
else:
	print (x)
	print (y)
-- EXECUTION TIME:
0.138167
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 7, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:47:02) 
-- CODE:
a = float (input("Digite um numero a de:"))
b = float (input("Digite um numero de b:"))
c = float (input("Digite um numero de c:"))
d = float (input("Digite um numero de d:"))
e = float (input("Digite um numero de e:"))
f = float (input("digite um numero de f:"))
x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)
if (x==0)(y==0):
	print ("Nao tem solucao")
else:
	print (x)
	print (y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:47:25) 
-- CODE:
a = float (input("Digite um numero a de:"))
b = float (input("Digite um numero de b:"))
c = float (input("Digite um numero de c:"))
d = float (input("Digite um numero de d:"))
e = float (input("Digite um numero de e:"))
f = float (input("digite um numero de f:"))
x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)
if (x==0),(y==0):
	print ("Nao tem solucao")
else:
	print (x)
	print (y)
-- ERROR:
File "XXXX", line 9
    if (x==0),(y==0):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:55:36) 
-- CODE:
a = float (input("Digite um numero a de:"))
b = float (input("Digite um numero de b:"))
c = float (input("Digite um numero de c:"))
d = float (input("Digite um numero de d:"))
e = float (input("Digite um numero de e:"))
f = float (input("digite um numero de f:"))
x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)
den = (a*e-b*d)
if ((a*e-b*d)==0):
	print ("Nao tem solucao")
else:
	print (x)
	print (y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:55:49) 
-- CODE:
a = float (input("Digite um numero a de:"))
b = float (input("Digite um numero de b:"))
c = float (input("Digite um numero de c:"))
d = float (input("Digite um numero de d:"))
e = float (input("Digite um numero de e:"))
f = float (input("digite um numero de f:"))
x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)
den = (a*e-b*d)
if ((a*e-b*d)==0):
	print ("Nao tem solucao")
else:
	print (x)
	print (y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:55:52) 
-- CODE:
a = float (input("Digite um numero a de:"))
b = float (input("Digite um numero de b:"))
c = float (input("Digite um numero de c:"))
d = float (input("Digite um numero de d:"))
e = float (input("Digite um numero de e:"))
f = float (input("digite um numero de f:"))
x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)
den = (a*e-b*d)
if ((a*e-b*d)==0):
	print ("Nao tem solucao")
else:
	print (x)
	print (y)
-- EXECUTION TIME:
0.21173
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 7, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:56:32) 
-- CODE:
a = float (input("Digite um numero a de:"))
b = float (input("Digite um numero de b:"))
c = float (input("Digite um numero de c:"))
d = float (input("Digite um numero de d:"))
e = float (input("Digite um numero de e:"))
f = float (input("digite um numero de f:"))
x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)
if ((a*e-b*d)==0):
	print ("Nao tem solucao")
else:
	print (x)
	print (y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:56:36) 
-- CODE:
a = float (input("Digite um numero a de:"))
b = float (input("Digite um numero de b:"))
c = float (input("Digite um numero de c:"))
d = float (input("Digite um numero de d:"))
e = float (input("Digite um numero de e:"))
f = float (input("digite um numero de f:"))
x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)
if ((a*e-b*d)==0):
	print ("Nao tem solucao")
else:
	print (x)
	print (y)
-- EXECUTION TIME:
0.17476
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 7, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:58:36) 
-- CODE:
a = float (input("Digite um numero a de:"))
b = float (input("Digite um numero de b:"))
c = float (input("Digite um numero de c:"))
d = float (input("Digite um numero de d:"))
e = float (input("Digite um numero de e:"))
f = float (input("digite um numero de f:"))
x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))
if (((a*e)-(b*d))==0):
	print ("Nao tem solucao")
else:
	print (x)
	print (y)
-- EXECUTION TIME:
0.159873
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 7, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 00:08:59) 
-- CODE:
a = float (input("Digite um numero a de:"))
b = float (input("Digite um numero de b:"))
c = float (input("Digite um numero de c:"))
d = float (input("Digite um numero de d:"))
e = float (input("Digite um numero de e:"))
f = float (input("digite um numero de f:"))
x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))
if (x and y==0):
	print ("Nao tem solucao")
else:
	print (x)
	print (y)
-- EXECUTION TIME:
0.14214
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 7, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 00:10:29) 
-- CODE:
a = float (input("Digite um numero a de:"))
b = float (input("Digite um numero de b:"))
c = float (input("Digite um numero de c:"))
d = float (input("Digite um numero de d:"))
e = float (input("Digite um numero de e:"))
f = float (input("digite um numero de f:"))
x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))
if ( ((c*e)-(b*f)) and ((a*e)-(b*d)) and ((a*f)-(c*d))==0 ):
	print ("Nao tem solucao")
else:
	print (x)
	print (y)
-- EXECUTION TIME:
0.157644
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 7, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:46:55) 
-- CODE:
a = float (input("Digite um numero a de:"))
b = float (input("Digite um numero de b:"))
c = float (input("Digite um numero de c:"))
d = float (input("Digite um numero de d:"))
e = float (input("Digite um numero de e:"))
f = float (input("digite um numero de f:"))
x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))
if (((a*e)-(b*d))==0):
	print ("Nao tem solucao")
else:
	print (x)
	print (y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:47:07) 
-- CODE:
a = float (input("Digite um numero a de:"))
b = float (input("Digite um numero de b:"))
c = float (input("Digite um numero de c:"))
d = float (input("Digite um numero de d:"))
e = float (input("Digite um numero de e:"))
f = float (input("digite um numero de f:"))
x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))
if (((a*e)-(b*d))==0):
	print ("Nao tem solucao")
else:
	print (x)
	print (y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 00:47:12) 
-- CODE:
a = float (input("Digite um numero a de:"))
b = float (input("Digite um numero de b:"))
c = float (input("Digite um numero de c:"))
d = float (input("Digite um numero de d:"))
e = float (input("Digite um numero de e:"))
f = float (input("digite um numero de f:"))
x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))
if (((a*e)-(b*d))==0):
	print ("Nao tem solucao")
else:
	print (x)
	print (y)
-- EXECUTION TIME:
0.185971
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 7, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 00:47:21) 
-- CODE:
a = float (input("Digite um numero a de:"))
b = float (input("Digite um numero de b:"))
c = float (input("Digite um numero de c:"))
d = float (input("Digite um numero de d:"))
e = float (input("Digite um numero de e:"))
f = float (input("digite um numero de f:"))
y = ((c*e)-(b*f))/((a*e)-(b*d))
x = ((a*f)-(c*d))/((a*e)-(b*d))
if (((a*e)-(b*d))==0):
	print ("Nao tem solucao")
else:
	print (x)
	print (y)
-- EXECUTION TIME:
0.13708
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 7, in <module>
    y = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 02:31:05) 
-- CODE:
a = float (input("Digite um numero a de:"))
b = float (input("Digite um numero de b:"))
c = float (input("Digite um numero de c:"))
d = float (input("Digite um numero de d:"))
e = float (input("Digite um numero de e:"))
f = float (input("digite um numero de f:"))
x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))
if ((a*e)-(b*d)==0):
	print ("Nao tem solucao")
else:
	print (x)
	print (y)
-- EXECUTION TIME:
0.14582
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 7, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 04:12:09) 
-- CODE:
a = float (input("Digite um numero a de:"))
b = float (input("Digite um numero de b:"))
c = float (input("Digite um numero de c:"))
d = float (input("Digite um numero de d:"))
e = float (input("Digite um numero de e:"))
f = float (input("digite um numero de f:"))
x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))
if ((a*e)-(b*d)==0):
	print ("Nao tem solucao")
else:
	print (x)
	print (y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 04:12:31) 
-- CODE:
a = float (input("Digite um numero a de:"))
b = float (input("Digite um numero de b:"))
c = float (input("Digite um numero de c:"))
d = float (input("Digite um numero de d:"))
e = float (input("Digite um numero de e:"))
f = float (input("digite um numero de f:"))
x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))
if ((a*e)-(b*d)==0):
	print ("Nao tem solucao")
else:
	print (x)
	print (y)
-- EXECUTION TIME:
0.27396
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 7, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 04:14:33) 
-- CODE:
a = float (input("Digite um numero a de:"))
b = float (input("Digite um numero de b:"))
c = float (input("Digite um numero de c:"))
d = float (input("Digite um numero de d:"))
e = float (input("Digite um numero de e:"))
f = float (input("digite um numero de f:"))
x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))
if ((a*e)-(b*d)==0):
	print ("Nao tem solucao")
else:
	print (x)
	print (y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 04:15:24) 
-- CODE:
a = float (input("Digite um numero a de:"))
b = float (input("Digite um numero de b:"))
c = float (input("Digite um numero de c:"))
d = float (input("Digite um numero de d:"))
e = float (input("Digite um numero de e:"))
f = float (input("digite um numero de f:"))
x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))
if ((a*e)-(b*d)==0):
	print ("Nao tem solucao")
else:
	print (x)
	print (y)
-- EXECUTION TIME:
0.13968
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 7, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:34:15) 
-- CODE:
a = float (input("Digite um numero a de:"))
b = float (input("Digite um numero de b:"))
c = float (input("Digite um numero de c:"))
d = float (input("Digite um numero de d:"))
e = float (input("Digite um numero de e:"))
f = float (input("digite um numero de f:"))
x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))
if ((a*e)-(b*d)==0):
	print ("Nao tem solucao")
else:
	print (x)
	print (y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:34:36) 
-- CODE:
a = float (input("Digite um numero a de:"))
b = float (input("Digite um numero de b:"))
c = float (input("Digite um numero de c:"))
d = float (input("Digite um numero de d:"))
e = float (input("Digite um numero de e:"))
f = float (input("digite um numero de f:"))
x = ((c*e)-(b*f))/((a*e)-(b*d))
y = ((a*f)-(c*d))/((a*e)-(b*d))
if ((a*e)-(b*d)==0):
	print ("Nao tem solucao")
else:
	print (x)
	print (y)
-- EXECUTION TIME:
0.216672
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 7, in <module>
    x = ((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:40:52) 
-- CODE:
a = float (input("Digite um numero a de:"))
b = float (input("Digite um numero de b:"))
c = float (input("Digite um numero de c:"))
d = float (input("Digite um numero de d:"))
e = float (input("Digite um numero de e:"))
f = float (input("digite um numero de f:"))
if ((a*e)-(b*d)==0):
	print ("Nao tem solucao")
else:
	x = ((c*e)-b*f)/((a*e)-(b*d))
	y = ((a*f)-(c*d))/((a*e)-(b*d))
print(x)
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:41:11) 
-- CODE:
a = float (input("Digite um numero a de:"))
b = float (input("Digite um numero de b:"))
c = float (input("Digite um numero de c:"))
d = float (input("Digite um numero de d:"))
e = float (input("Digite um numero de e:"))
f = float (input("digite um numero de f:"))
if ((a*e)-(b*d)==0):
	print ("Nao tem solucao")
else:
	x = ((c*e)-b*f)/((a*e)-(b*d))
	y = ((a*f)-(c*d))/((a*e)-(b*d))
print(x)
print(y)
-- EXECUTION TIME:
0.157109
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 12, in <module>
    print(x)
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
